--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-streamlit==0.79.0
-matplotlib==3.3.4
-altair==4.1.0
-numpy==1.20.1
-pandas==1.2.3
-calendar==0.4.7
-requests==2.25.1
-json==2.0.9
-streamlit-lottie==0.13.0
-rich==10.11.0
+streamlit 
+matplotlib.pyplot
+altair
+numpy
+pandas
+calendar
+datetime  
+io 
+requests 
+json
+streamlit_lottie
+rich  
